syntax = "proto3";

option java_package = "org.acme.quiz.grpc";
option java_multiple_files = true;


service Quiz {
  rpc GetQuestions(Empty) returns (stream Question);

  rpc Respond(Answer) returns (Result);

  rpc SignUp(SignUpRequest) returns (SignUpResponse);

  rpc WatchScore(Empty) returns (stream Scores);
}


message SignUpRequest{
  string name = 1;
}

message SignUpResponse {
  enum Status {
    UNDEFINED = 0;
    OKAY = 1;
    NAME_TAKEN = 2;
  }
  Status status = 1;
}

message Scores {
  repeated UserScore results = 1;
}

message UserScore {
  string user = 1;
  int32 points = 2;
}

message Answer {
  string text = 1;
  string user = 2;
  string question = 3;
}

message Result {
  enum Status {
    UNDEFINED = 0;
    WRONG = 1;
    CORRECT = 2;
    DUPLICATE_ANSWER = 3;
    TIMEOUT = 4;
    UNKNOWN_USER = 5;
  }
  Status status = 1;
}

message Question {
  string text = 1;
  repeated string answers = 2;
}

message Empty {}